@@ -13,9 +13,9 @@ ceguischemadir = $(datadir)/ember/media/shared/gui
 
 
 dist_ceguifonts_DATA = datafiles/fonts/Font.xsd datafiles/fonts/tahoma-14.xml datafiles/fonts/tahoma-10.xml datafiles/fonts/tahoma-8.xml datafiles/fonts/tahoma.ttf datafiles/fonts/vera-sans-14.xml datafiles/fonts/vera-sans-10.xml datafiles/fonts/vera-sans-8.xml datafiles/fonts/Vera.ttf
-dist_ceguiimagesets_DATA = datafiles/imagesets/Imageset.xsd datafiles/imagesets/TaharezLook.imageset datafiles/imagesets/WindowsLook.imageset datafiles/imagesets/iconset_standard.imageset datafiles/imagesets/iconset_mason.imageset datafiles/imagesets/EmberLook.imageset
+dist_ceguiimagesets_DATA = datafiles/imagesets/Imageset.xsd datafiles/imagesets/iconset_standard.imageset datafiles/imagesets/iconset_mason.imageset datafiles/imagesets/EmberLook.imageset
 dist_ceguilayouts_DATA = datafiles/layouts/GUILayout.xsd
-dist_ceguischemes_DATA = datafiles/schemes/TaharezLook.scheme datafiles/schemes/TaharezLookWidgetAliases.scheme datafiles/schemes/TaharezLookSkin.scheme datafiles/schemes/WindowsLook.scheme datafiles/schemes/WindowsLookSkin.scheme datafiles/schemes/GUIScheme.xsd datafiles/schemes/EmberLookSkin.scheme
+dist_ceguischemes_DATA = datafiles/schemes/GUIScheme.xsd datafiles/schemes/EmberLookSkin.scheme
 dist_ceguiconfig_DATA = datafiles/configs/cegui.config
-dist_ceguilooknfeel_DATA = datafiles/looknfeel/TaharezLook.looknfeel datafiles/looknfeel/Vanilla.looknfeel datafiles/looknfeel/WindowsLook.looknfeel datafiles/looknfeel/EmberLook.looknfeel
+dist_ceguilooknfeel_DATA = datafiles/looknfeel/EmberLook.looknfeel
 dist_ceguischema_DATA = datafiles/layouts/GUILayout.xsd datafiles/imagesets/Imageset.xsd datafiles/fonts/Font.xsd datafiles/schemes/GUIScheme.xsd datafiles/configs/CEGUIConfig.xsd datafiles/looknfeel/Falagard.xsd
