@@ -1,3 +1,8 @@
+2007-02-09 Erik Hjortsberg  <erik.hjortsberg@iteam.se>
+
+	* src/components/ogre/cegui/Makefile.am: removed some old files
+	* src/components/ogre/SceneManagers/EmberPagingSceneManager/src/OgrePagingLandScapeRenderable.cpp: We've changed the default height of invalid segments to -1, so we'll have to update the LOD calculation fix too
+
 2007-02-08 Erik Hjortsberg  <erik.hjortsberg@iteam.se>
 
 	* src/components/ogre/modeldefinitions/Makefile.am: fixed uninstall problems
